--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@openzeppelin/contracts": "^4.4.0",
+    "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "next": "12.0.7",
     "react": "17.0.2",
