--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
