--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-text-truncate": "^0.17.0",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
