--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@openzeppelin/contracts": "^4.4.0",
+    "@walletconnect/web3-provider": "^1.7.1",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "next": "12.0.7",
@@ -21,7 +22,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-text-truncate": "^0.17.0",
-    "web3modal": "^1.9.4"
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.3",
